added the intro flight page and images, also deleted unnecessary files

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">  
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>About Claudia Contreras</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -24,18 +24,18 @@
 		<header class="clearfix">
 		    <div class="logo col-md-3"><h2 class="logo-text">CFI CONTRERAS</h2></div>
 		    <nav class="clearfix">
-            <ul class="clearfix">
-                <li><a href="index.html" >Home</a></li>
-                <li><a href="about.html" class="active">About Me</a></li>
-                <li><a href="#">Learn To Fly</a></li>
-                <li><a href="#">Intro Flight</a></li>
-                <li><a href="#">Pictures</a></li>
-                <li><a href="#" class="last">contact</a></li>
-            </ul>
+          <ul class="clearfix">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html" class="active">About Me</a></li>
+              <li><a href="introFlight.html">Intro Flight</a></li>
+              <li><a href="#">Flight Training</a></li>
+              <li><a href="#">Pictures</a></li>
+              <li><a href="#" class="last">contact</a></li>
+          </ul>
         </nav>
         <div class="pullcontainer">
         <a href="#" id="pull"><i class="fa fa-bars fa-2x"></i></a>
-        </div>     
+        </div>
 		</header>
     <div class="banner">
     <ul>
@@ -80,6 +80,11 @@
     </div>
     <div class="text-inter">
     <div class="container">
+      <div class="row">
+      <div class="col-md-12">
+        <img class="text-img" src="img/me.jpg" alt="Claudia Maciel-Contreras" />
+      </div>
+    </div>
 		<div class="row">
         <div class="col-md-6">
           <p>Hi, my name is Claudia and I  appreciate this opportunity to introduce myself. I&rsquo;ve enjoyed instructing for  several years now and have developed my own personal style of instruction which  focuses on adding &ldquo;fun&rdquo; into learning. While I do follow a training  syllabus in order to make sure that all areas of aeronautical knowledge and  flight training are covered, I consider it equally important that students get  a good exposure to the real-world aspects of flying _ the type of &ldquo;street  knowledge&rdquo; not found in text books, but gained only through experience.</p>
@@ -90,7 +95,7 @@
           <p>In addition to primary training, I can take you further in your flying goals  with an instrument rating, a multi-engine rating, a Commercial license, or an  Airline Transport Pilot rating. I also prepare pilots to fly in challenging  environments such as mountain flying, high-altitude and complex / high  performance aircraft.</p>
 		  <p>So whether you want to take your first flight, continue your flight  training, or tune-up unused skills, contact me and we will take that first  flight together. I am passionate about flying and I want you to be too.</p>
 		  <p>Picking an instructor who is right  for you is probably the most important decision you will make, as it will weigh  heavily in determining the success you have in acheiving your goal. I look forward  to being able to sit down and talk with you one-on-one, or perhaps spend a few  minutes on the phone if that&rsquo;s more convenient. Either way, I&rsquo;d like to do  whatever I can to help you get off to the best start possible.</p>
-        </div>  
+        </div>
       </div>
     </div>
     </div>
@@ -108,16 +113,16 @@
           </div>
           <div class="col-md-2">
             <ul class="footer-links">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About Me</a></li>
-                <li><a href="#">Learn To Fly</a></li>
-                <li><a href="#">Intro Flight</a></li>
-                <li><a href="#">Pictures</a></li>
-				<li><a href="#">Contact Me</a></li>
+				          <li><a href="index.html">Home</a></li>
+				          <li><a href="about.html">About Me</a></li>
+                  <li><a href="introFlight.html">Intro Flight</a></li>
+                  <li><a href="#">Flight Training</a></li>
+                  <li><a href="#">Pictures</a></li>
+				          <li><a href="#">Contact Me</a></li>
             </ul>
           </div>
         </div>
-      </div>  
+      </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
