--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">  
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Professional Flight Instructor in California's Central Coast</title>
 <meta charset="UTF-8">
 <meta name="description" content="Learn to Fly, take Flying Lessons, Flight Training, Fly Salinas, Fly Monterey Bay Area, Fly Santa Cruz, Bay Tours"/>
@@ -30,15 +30,15 @@
             <ul class="clearfix">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
-                <li><a href="#">Learn To Fly</a></li>
-                <li><a href="#">Intro Flight</a></li>
+                <li><a href="introFlight.html">Intro Flight</a></li>
+                <li><a href="#">Flight Training</a></li>
                 <li><a href="#">Pictures</a></li>
                 <li><a href="#" class="last">contact</a></li>
             </ul>
         </nav>
         <div class="pullcontainer">
         <a href="#" id="pull"><i class="fa fa-bars fa-2x"></i></a>
-        </div>     
+        </div>
 		</header>
     <div class="banner">
     <ul>
@@ -68,7 +68,7 @@
         </li>
     </ul>
 </div>
-    
+
     <div class="text-inter">
     <div class="container">
       <div class="row">
@@ -82,7 +82,7 @@
           <h3>My goal is to see you succeed and accomplish what very few others have done.</h3>
           <p>I am a full-time, 7-day a week &quot;career&quot; flight instructor serving Salinas, Watsonville,and Montereys airports. I apply over 11 years of flying experience to help my clients quickly gain the knowledge and skill to fly safely, as a result of my handouts and one on one instruction.</p>
 		  <p>Click <a href="TSA Information for Flight Training.pdf" target="_blank">HERE</a> if you are a non-US citizen and would like to learn more about the TSA approval process for US flight training.</p>
-        </div>  
+        </div>
       </div>
     </div>
     </div>
@@ -125,16 +125,16 @@
           </div>
           <div class="col-md-2">
             <ul class="footer-links">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About Me</a></li>
-                <li><a href="#">Learn To Fly</a></li>
-                <li><a href="#">Intro Flight</a></li>
-                <li><a href="#">Pictures</a></li>
-				<li><a href="#">Contact Me</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About Me</a></li>
+              <li><a href="introFlight.html">Intro Flight</a></li>
+              <li><a href="#">Flight Training</a></li>
+              <li><a href="#">Pictures</a></li>
+              <li><a href="#">Contact Me</a></li>
             </ul>
           </div>
         </div>
-      </div>  
+      </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
