Added flight traning page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="introFlight.html">Intro Flight</a></li>
-                <li><a href="#">Flight Training</a></li>
+                <li><a href="flightTraining.html">Flight Training</a></li>
                 <li><a href="#">Pictures</a></li>
                 <li><a href="#" class="last">contact</a></li>
             </ul>
@@ -118,10 +118,10 @@
             <h2>CFI CONTRERAS</h2>
           </div>
           <div class="col-md-5">
-            <p>People have been dreaming of flight for 1000's of years, but have only been able to make that dream come true for about the last 100   years. <strong>Make your dream come true today and start flying!</strong><br /><br />Contact: <a href="mail to: cficontreras@icloud.com">cficontreras@icloud.com</a> or call (831)776-9972 any day of the week. I would be glad answer your questions over the phone, or to meet with you for free to discuss your training needs and explain my syllabus, training handouts, videos, and teaching methods</p>
+            <p>People have been dreaming of flight for over a 1000 years, but have only been able to make that dream come true for about the last 100  years. <strong>Make your dream come true today and start flying!</strong><br /><br />Contact: <a href="mail to: cficontreras@icloud.com">cficontreras@icloud.com</a> or call (831)776-9972 any day of the week.</p>
           </div>
           <div class="col-md-3">
-            <p>I will be glad answer your questions over the phone, or to meet with you for free to discuss your training needs and explain my syllabus, training handouts, videos, and teaching methods</p>
+            <p>I will be glad to answer your questions over the phone, or to meet with you for free to discuss your training needs and explain my syllabus, training handouts, videos, and teaching methods.</p>
           </div>
           <div class="col-md-2">
             <ul class="footer-links">
