--- a/introFlight.html
+++ b/introFlight.html
@@ -28,7 +28,7 @@
               <li><a href="index.html" >Home</a></li>
               <li><a href="about.html">About Me</a></li>
               <li><a href="introFlight.html" class="active">Intro Flight</a></li>
-              <li><a href="#">Flight Training</a></li>
+              <li><a href="flightTraining.html">Flight Training</a></li>
               <li><a href="#">Pictures</a></li>
               <li><a href="#" class="last">contact</a></li>
           </ul>
@@ -184,7 +184,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About Me</a></li>
               <li><a href="introFlight.html">Intro Flight</a></li>
-              <li><a href="#">Flight Training</a></li>
+              <li><a href="flightTraining.html">Flight Training</a></li>
               <li><a href="#">Pictures</a></li>
               <li><a href="#">Contact Me</a></li>
             </ul>
