Fixed Typos and missing divs

--- a/flightTraining.html
+++ b/flightTraining.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -10,126 +11,145 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/queries.css">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-	  <!-- Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+    <!-- Fonts -->
+    <link href="http://fonts.googleapis.com/css?family=Sintony:400,700" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet" type="text/css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
-		<header class="clearfix">
-		    <div class="logo col-md-3"><h2 class="logo-text">CFI CONTRERAS</h2></div>
-		    <nav class="clearfix">
-          <ul class="clearfix">
-              <li><a href="index.html" >Home</a></li>
-              <li><a href="about.html">About Me</a></li>
-              <li><a href="introFlight.html" >Intro Flight</a></li>
-              <li><a href="flightTraining.html" class="active">Flight Training</a></li>
-              <li><a href="#">Pictures</a></li>
-              <li><a href="#" class="last">contact</a></li>
-          </ul>
+</head>
+
+<body>
+    <header class="clearfix">
+        <div class="logo col-md-3">
+            <h2 class="logo-text">CFI CONTRERAS</h2></div>
+        <nav class="clearfix">
+            <ul class="clearfix">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="introFlight.html">Intro Flight</a></li>
+                <li><a href="flightTraining.html" class="active">Flight Training</a></li>
+                <li><a href="#">Pictures</a></li>
+                <li><a href="#" class="last">contact</a></li>
+            </ul>
         </nav>
         <div class="pullcontainer">
-        <a href="#" id="pull"><i class="fa fa-bars fa-2x"></i></a>
+            <a href="#" id="pull"><i class="fa fa-bars fa-2x"></i></a>
         </div>
-		</header>
+    </header>
     <div class="banner">
-    <ul>
-        <li style="background-image: url('img/05.jpg');">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-6 col-md-offset-3">
-                <div class="hero-title">
-                  The first certificate you can get is called a Private Pilot Certificate
+        <ul>
+            <li style="background-image: url('img/05.jpg');">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6 col-md-offset-3">
+                            <div class="hero-title">
+                                The first certificate you can get is called a Private Pilot Certificate
+                            </div>
+                            <p class="hero-content">It allows you to take passengers for fun.</p>
+                        </div>
+                    </div>
                 </div>
-              <p class="hero-content">It allows you to take passengers for fun.</p>
-              </div>
-            </div>
-          </div>
-        </li>
-        <li style="background-image: url('img/06.jpg');">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-6 col-md-offset-3">
-                <div class="hero-title">
-                  The training consists of three phases
+            </li>
+            <li style="background-image: url('img/06.jpg');">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6 col-md-offset-3">
+                            <div class="hero-title">
+                                The training consists of three phases
+                            </div>
+                            <p class="hero-content">the pre-solo, the navigation or cross-country, and the preparation for the practical test. </p>
+                        </div>
+                    </div>
                 </div>
-              <p class="hero-content">the pre-solo, the navigation or cross-country,  and the preparation for the practical test. </p>
-              </div>
-            </div>
-          </div>
-        </li>
-    </ul>
-</div>
+            </li>
+        </ul>
+    </div>
     <div class="container">
-    <div class="arrow"></div>
+        <div class="arrow"></div>
     </div>
     <div class="container carousel">
-      <div class="row">
-    <div class="text-inter">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h3>Private Pilot Certificate</h3>
-          <p>The first certificate you can get is called a <strong>Private Pilot Certificate</strong>. It allows you to fly by visual rules, take passengers for fun but not for hire and is the basis for the rest of your learning. The training consists of three phases: the pre-solo, when you learn the basics of flying an airplane, the navigation or cross-country, which means going places farther than 50 nautical miles, and the preparation for the practical test. You also will take an FAA-administered written test and will need to submit yourself to a medical examination prior to acting as pilot-in-command of an aircraft.</p>
+        <div class="text-inter">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3>Private Pilot Certificate</h3>
+                        <p>The first certificate you can get is called a <strong>Private Pilot Certificate</strong>. It allows you to fly by visual rules, take passengers for fun but not for hire and is the basis for the rest of your learning. The training
+                            consists of three phases: the pre-solo, when you learn the basics of flying an airplane, the navigation or cross-country, which means going places farther than 50 nautical miles, and the preparation for the practical test.
+                            You also will take an FAA-administered written test and will need to submit yourself to a medical examination prior to acting as pilot-in-command of an aircraft.</p>
 
-          <h3>Instrument Rating</h3>
-          <p>The <strong>Instrument Rating,</strong> added to your Private Pilot license, gives you more flexibility. With this certification, you can now fly through a cloud layer or complete an entire flight with no visual reference, only by using your instruments ("steam gauges" or glass panel). This rating will enhance your flying skills and provide you with more confidence as well as greater safety.</p>
+                        <h3>Instrument Rating</h3>
+                        <p>The <strong>Instrument Rating,</strong> added to your Private Pilot license, gives you more flexibility. With this certification, you can now fly through a cloud layer or complete an entire flight with no visual reference, only
+                            by using your instruments ("steam gauges" or glass panel). This rating will enhance your flying skills and provide you with more confidence as well as greater safety.</p>
 
-          <h3>Commercial Certificate</h3>
-          <p>Thinking of flying these? Or maybe becoming a flight instructor yourself? The <strong>Commercial Pilot Certificate</strong> is what you will need. This is advanced training, usually given in a complex airplane -with retractable gear, flaps and a constant-speed propeller- that covers all the same areas as the private pilot certificate but in far greater detail, in addition to four maneuvers specific to this certificate. You will learn to fly the airplane with greater smoothness, precision and you will hone your piloting skills further.</p>
+                        <h3>Commercial Certificate</h3>
+                        <p>Thinking of flying these? Or maybe becoming a flight instructor yourself? The <strong>Commercial Pilot Certificate</strong> is what you will need. This is advanced training, usually given in a complex airplane -with retractable
+                            gear, flaps and a constant-speed propeller- that covers all the same areas as the private pilot certificate but in far greater detail, in addition to four maneuvers specific to this certificate. You will learn to fly the airplane
+                            with greater smoothness, precision and you will hone your piloting skills further.</p>
 
-          <h3>Flight Instructor Certificate (CFI)</h3>
-          <p>If you are passionate about flying and you want to share the magic of flight with your friends, family or anybody eager to learn, the initial <strong>Flight Instructor Certificate</strong> is the way to go. Teaching is a very good if not the best way to thoroughly understand a subject. Flying on a regular basis -whether you decide to become a full-time or part-time instructor- will allow you to refine your skills and grasp many aspects of flying more in depth.</p>
+                        <h3>Flight Instructor Certificate (CFI)</h3>
+                        <p>If you are passionate about flying and you want to share the magic of flight with your friends, family or anybody eager to learn, the initial <strong>Flight Instructor Certificate</strong> is the way to go. Teaching is a very good
+                            if not the best way to thoroughly understand a subject. Flying on a regular basis -whether you decide to become a full-time or part-time instructor- will allow you to refine your skills and grasp many aspects of flying more
+                            in depth.</p>
 
-          <h3>Flight Instructor Certificate Instrument Rating (CFII)</h3>
-          <p>Adding an instrument rating to your flight instructor certificate allows you to provide instrument training for the issuance of an instrument rating, a type rating not limited to VFR, or the instrument training required for commercial pilot and airline transport pilot certificate. The flight instructor certificate alone does not offer these privileges.</p>
+                        <h3>Flight Instructor Certificate Instrument Rating (CFII)</h3>
+                        <p>Adding an instrument rating to your flight instructor certificate allows you to provide instrument training for the issuance of an instrument rating, a type rating not limited to VFR, or the instrument training required for commercial
+                            pilot and airline transport pilot certificate. The flight instructor certificate alone does not offer these privileges.</p>
 
-          <h3>Mountain Checkout</h3>
-          <p>Flying in the mountains requires a different set of skills involving in particular a very good understanding of the environment and especially weather, which can change very quickly. Knowing where the winds are coming from and how they will be affected by terrain -to form rotor clouds, fog or possibly thunderstorms- is quite important. Understanding how temperature combined with high altitude affect airplane and human performance is another critical aspect of mountain flying.   Mountain checkouts in the Bay Area usually consist in doing a substantial ground session and subsequently flying to high altitude airports like South Lake Tahoe, Truckee and Reno as well as other ones less known but presenting various challenges, such as shorter runways surrounded by trees, down- or upward sloping runways, plateau runways or runways surrounded by terrain. Most of the time, the checkout or training lasts the whole day with landings at multiple airports and is geared for pilots who already have their private pilot certificate and want to hone their skills. This is a good basis to continue learning and training further to fly in more challenging areas outside of California, such as Colorado, Utah and other high terrain airports. </p>
+                        <h3>Mountain Checkout</h3>
+                        <p>Flying in the mountains requires a different set of skills involving in particular a very good understanding of the environment and especially weather, which can change very quickly. Knowing where the winds are coming from and
+                            how they will be affected by terrain -to form rotor clouds, fog or possibly thunderstorms- is quite important. Understanding how temperature combined with high altitude affect airplane and human performance is another critical
+                            aspect of mountain flying. Mountain checkouts in the Bay Area usually consist in doing a substantial ground session and subsequently flying to high altitude airports like South Lake Tahoe, Truckee and Reno as well as other
+                            ones less known but presenting various challenges, such as shorter runways surrounded by trees, down- or upward sloping runways, plateau runways or runways surrounded by terrain. Most of the time, the checkout or training lasts
+                            the whole day with landings at multiple airports and is geared for pilots who already have their private pilot certificate and want to hone their skills. This is a good basis to continue learning and training further to fly
+                            in more challenging areas outside of California, such as Colorado, Utah and other high terrain airports. </p>
 
-          <h3>Biennial Flight Review</h3>
-          <p>(14 CFR 61.56 (a)) Also known as the "BFR", this evaluation is required to be completed every 24 calendar months by all pilot certificate holders. The minimum required is 1 hour of flight and 1 hour of ground time. Depending on how much you fly and how current you are, the BFR can be as short as what is required by the regulations or take longer.</p>
+                        <h3>Biennial Flight Review</h3>
+                        <p>(14 CFR 61.56 (a)) Also known as the "BFR", this evaluation is required to be completed every 24 calendar months by all pilot certificate holders. The minimum required is 1 hour of flight and 1 hour of ground time. Depending on
+                            how much you fly and how current you are, the BFR can be as short as what is required by the regulations or take longer.</p>
 
-          <h3>INSTRUMENT PROFICIENCY CHECK</h3>
-          <p>(14 CFR 61.57 (d)) If you hold an instrument rating and do not get your required 6 approaches, your hold and navigation in the last 6 to 12 months, you will need to complete an IPC before you are legal to take an instrument clearance and fly in instrument meteorological conditions. The IPC is conducted using the instrument rating practical test standard.</p>
+                        <h3>INSTRUMENT PROFICIENCY CHECK</h3>
+                        <p>(14 CFR 61.57 (d)) If you hold an instrument rating and do not get your required 6 approaches, your hold and navigation in the last 6 to 12 months, you will need to complete an IPC before you are legal to take an instrument clearance
+                            and fly in instrument meteorological conditions. The IPC is conducted using the instrument rating practical test standard.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
     </div>
     <div class="shadow"></div>
     <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-2">
-            <h2>CFI CONTRERAS</h2>
-          </div>
-          <div class="col-md-5">
-            <p>People have been dreaming of flight for over a 1000 years, but have only been able to make that dream come true for about the last 100  years. <strong>Make your dream come true today and start flying!</strong><br /><br />Contact: <a href="mail to: cficontreras@icloud.com">cficontreras@icloud.com</a> or call (831)776-9972 any day of the week.</p>
-          </div>
-          <div class="col-md-3">
-            <p>I will be glad to answer your questions over the phone, or to meet with you for free to discuss your training needs and explain my syllabus, training handouts, videos, and teaching methods.</p>
-          </div>
-          <div class="col-md-2">
-            <ul class="footer-links">
-				          <li><a href="index.html">Home</a></li>
-				          <li><a href="about.html">About Me</a></li>
-                  <li><a href="introFlight.html">Intro Flight</a></li>
-                  <li><a href="flightTraining.html">Flight Training</a></li>
-                  <li><a href="#">Pictures</a></li>
-				          <li><a href="#">Contact Me</a></li>
-            </ul>
-          </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2">
+                    <h2>CFI CONTRERAS</h2>
+                </div>
+                <div class="col-md-5">
+                    <p>People have been dreaming of flight for over a 1000 years, but have only been able to make that dream come true for about the last 100 years. <strong>Make your dream come true today and start flying!</strong><br /><br />Contact: <a
+                            href="mail to: cficontreras@icloud.com">cficontreras@icloud.com</a> or call (831)776-9972 any day of the week.</p>
+                </div>
+                <div class="col-md-3">
+                    <p>I will be glad to answer your questions over the phone, or to meet with you for free to discuss your training needs and explain my syllabus, training handouts, videos, and teaching methods.</p>
+                </div>
+                <div class="col-md-2">
+                    <ul class="footer-links">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Me</a></li>
+                        <li><a href="introFlight.html">Intro Flight</a></li>
+                        <li><a href="flightTraining.html">Flight Training</a></li>
+                        <li><a href="#">Pictures</a></li>
+                        <li><a href="#">Contact Me</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-      </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
     <script src="js/unslider.min.js"></script>
-  </body>
+</body>
+
 </html>
